[defaults.yml] Edit heading and subheading

--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "Sight and Sound / 視界と音"
+  subheading: "映像と音響、照明とカメラ、それらについての備忘録"
   banner: "Your image url"
